Additional fixes, send move list in correct order

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 all: textgame gfxgame
 
 textgame: textmain.hs Game.hs ICFPRandom.hs
-	ghc -o textgame textmain.hs Game.hs ICFPRandom.hs
+	ghc -O2 -o textgame textmain.hs Game.hs ICFPRandom.hs
 
 gfxgame: gfxmain.hs Game.hs ICFPRandom.hs
 	ghc -o gfxgame gfxmain.hs Game.hs ICFPRandom.hs
@@ -10,3 +10,4 @@ gfxgame: gfxmain.hs Game.hs ICFPRandom.hs
 init:
 	cabal install json
 	cabal install gloss
+	caval install MissingH
